fix how to use section on mobile

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -906,9 +906,6 @@ select {
 .max-w-sm {
   max-width: 24rem;
 }
-.max-w-2xl {
-  max-width: 42rem;
-}
 .max-w-5xl {
   max-width: 64rem;
 }
@@ -973,9 +970,6 @@ select {
 }
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-.flex-row {
-  flex-direction: row;
 }
 .flex-col {
   flex-direction: column;
@@ -2129,6 +2123,10 @@ select {
     margin-right: 1rem;
   }
 
+  .md\:mr-2 {
+    margin-right: 0.5rem;
+  }
+
   .md\:ml-0 {
     margin-left: 0px;
   }
@@ -2149,20 +2147,12 @@ select {
     margin-left: 1.25rem;
   }
 
-  .md\:mb-1 {
-    margin-bottom: 0.25rem;
-  }
-
-  .md\:mt-0 {
-    margin-top: 0px;
-  }
-
   .md\:mt-1 {
     margin-top: 0.25rem;
   }
 
-  .md\:mr-2 {
-    margin-right: 0.5rem;
+  .md\:mb-1 {
+    margin-bottom: 0.25rem;
   }
 
   .md\:block {
@@ -2191,6 +2181,10 @@ select {
 
   .md\:max-w-3xl {
     max-width: 48rem;
+  }
+
+  .md\:max-w-2xl {
+    max-width: 42rem;
   }
 
   .md\:grid-cols-2 {
@@ -2251,16 +2245,8 @@ select {
     padding-top: 0px;
   }
 
-  .md\:pt-5 {
-    padding-top: 1.25rem;
-  }
-
   .md\:pt-4 {
     padding-top: 1rem;
-  }
-
-  .md\:pl-0 {
-    padding-left: 0px;
   }
 
   .md\:pr-0 {
@@ -2287,6 +2273,11 @@ select {
     text-align: justify;
   }
 
+  .md\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
   .md\:text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
@@ -2300,11 +2291,6 @@ select {
   .md\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
-  }
-
-  .md\:text-sm {
-    font-size: 0.875rem;
-    line-height: 1.25rem;
   }
     .md\:footer-text-logo {
         /* @apply flex-row items-center content-start justify-evenly; */
